# integration

./: README.md  pyproject.toml  run.sh
integration/: __init__.py  __main__.py
integration/business_logic/: __init__.py
integration/cleansing/: __init__.py
integration/deduplication/: __init__.py
integration/raw/: __init__.py  core.py  ingestion.py  stats.py  storage.py  validation.py
integration/raw/adapters/: __init__.py  base.py  database.py  factory.py  file.py  mdb.py  rest.py  xlsx.py
