[tool.poetry]
name = "integration"
version = "0.1.0"
description = ""
authors = ["Rodion Kostin <rodion.kostin.999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
xlwt = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
